--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Kotlin_ot_project_I"
         tools:targetApi="31">
+        <activity android:name=".TeamActivity"
+            android:exported="true"/>
         <activity
             android:name=".IntroduceActivity"
             android:exported="false" />
