--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Kotlin_ot_project_I"
         tools:targetApi="31">
         <activity
+            android:name=".PersonalIntroduceActivity"
+            android:exported="false" />
+        <activity
             android:name=".IntroduceActivity"
             android:exported="false" />
         <activity
