--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Kotlin_ot_project_I"
-        >
-        <activity android:name=".TeamActivity"
-            android:exported="false"/>
+        android:theme="@style/Theme.Kotlin_ot_project_I">
+        <activity
+            android:name=".addActivity"
+            android:exported="false" />
+        <activity
+            android:name=".TeamActivity"
+            android:exported="false" />
         <activity
             android:name=".PersonalActivity"
             android:exported="false" />
@@ -22,8 +25,8 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:theme="@style/Theme.AppCompat.SplashScreen"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat.SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
